Change History
==============

3.5.1 (unreleased)
------------------

* Updated mime-type for .js to be application/javascript.

3.5.0 (2009-10-22)
------------------

* Moved the implementation of zope.publisher.contenttype to
  zope.contenttype.parse, moved tests along.

3.4.3 (2009-12-28)
------------------
* Updated mime-type for .js to be application/javascript.

3.4.2 (2009-05-28)
------------------

* Added MS Office 12 types
  based on:
  http://www.therightstuff.de/2006/12/16/Office+2007+File+Icons+For+Windows+SharePoint+Services+20+And+SharePoint+Portal+Server+2003.aspx

3.4.1 (2009-02-04)
------------------

* Improved text_type(). Based on the patch from
  http://www.zope.org/Collectors/Zope/2355/

* Add missing setuptools dependency to setup.py.

* Added reference documentation.

3.4.0 (2007-09-13)
------------------

* First stable release as an independent package.